nextcloud/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - image: postgres:16.1-alpine
          name: db
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 396Mi
              cpu: 1000m
      volumes:
        - name: db-volume
          hostPath:
            path: /var/data/nextcloud/postgres
            type: Directory
