nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud-volume
          hostPath:
            path: /var/data/nextcloud/storage
            type: Directory
        - name: paperless-volume
          hostPath:
            path: /var/data/paperless/consume
            type: Directory
      containers:
        - image: nextcloud:30.0.0
          name: nextcloud
          resources:
            limits:
              memory: 4Gi
              cpu: 4000m
            requests:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - mountPath: "/var/www/html"
              name: nextcloud-volume
            - mountPath: "/var/data/paperless/consume"
              name: paperless-volume
        - name: nextcloud-cron
          image: nextcloud:30.0.0
          command:
            - /cron.sh
          resources:
            limits:
              memory: 2Gi
              cpu: 4000m
            requests:
              memory: 256Mi
              cpu: 100m
          volumeMounts:
            - mountPath: "/var/www/html"
              name: nextcloud-volume
