nextcloud/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:7.4.3-alpine
          name: redis
          command:
            - redis-server
            - --save ""
            - --appendonly no
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
