nextcloud/imaginary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imaginary
  labels:
    app: imaginary
spec:
  ports:
    - port: 9000
      name: imaginary
  clusterIP: None
  selector:
    app: imaginary
