nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nextcloud
